# Intel8086-Interpreter

./: .clang-format  .gitignore  CMakeLists.txt  README.md  function.c  function.h  main.c  test.cpp
Binary/: CMakeLists.txt
Binary/inc/: binary.hpp  message.hpp
Binary/src/: binary.cpp  message.cpp
Command/: CMakeLists.txt
Command/inc/: commands.hpp
Command/src/: commands.cpp
IwA/: CMakeLists.txt
IwA/inc/: IwA.hpp
IwA/src/: IwA.cpp
IwRM/: CMakeLists.txt
IwRM/inc/: IwRM.hpp
IwRM/src/: IwRM.cpp
RMwR/: CMakeLists.txt
RMwR/inc/: RMwR.hpp
RMwR/src/: RMwR.cpp
Singleton/: CMakeLists.txt
Singleton/inc/: singleton.hpp
Singleton/src/: singleton.cpp
basic_R/: CMakeLists.txt
basic_R/inc/: basic_R.hpp
basic_R/src/: basic_R.cpp
firmware/: CMakeLists.txt
firmware/inc/: function.hpp
firmware/src/: function.cpp  main.cpp
inc/: IwRM.hpp  RMwR.hpp  basic_R.hpp  commands.hpp  function.hpp  jmp.hpp
jmp/: CMakeLists.txt
jmp/inc/: jmp.hpp
jmp/src/: jmp.cpp
logic/: CMakeLists.txt
logic/inc/: logic.hpp
logic/src/: logic.cpp
rep/: CMakeLists.txt
rep/inc/: rep.hpp
rep/src/: rep.cpp
src/: IwA.cpp  IwRM.cpp  RMwR.cpp  Singleton.cpp  basic_R.cpp  commands.cpp  function.cpp  jmp.cpp  logic.cpp  main.cpp
test/: test.sh  test_d.sh  test_m.sh
